load(
    "//tools/skylark:drake_cc.bzl",
    "drake_cc_binary",
)
load("//tools/install:install_data.bzl", "install_data")

drake_cc_binary(
    name = "hello",
    srcs = ["hello.cc"],
    data = [],
    deps = [
        "//common:add_text_logging_gflags",
        "@gflags"
    ],
)

drake_cc_binary(
    name = "sysid_mpc_quadrotor",
    srcs = ["sysid_mpc_quadrotor.cc"],
    deps = [
        "//examples:quadrotor:quadrotor_plant",
        "//examples:quadrotor:quadrotor_geometry",
        "//common:is_approx_equal_abstol",
        "//lcm",
        "//systems/analysis:simulator",
        "//systems/framework:diagram",
        "//common:add_text_logging_gflags",
        "@gflags"
    ],
)

